--- a/my_blog/my_blog/templates/index.html
+++ b/my_blog/my_blog/templates/index.html
@@ -10,11 +10,13 @@
     <div>
         <div>
             <div class="guide">
-                <a  text-decoration: none>关于我</a>
-                <a  text-decoration: none>所有博客</a>
-                <a  text-decoration: none>给我留言</a>
+            <ul>
+                <li><a href="#" >关于我</a></li>
+                <li><a href="#" >所有博客</a></li>
+                <li><a href="#" >给我留言</a></li>
+            </ul>
             </div>
-            <hr margin-top: "1000px";>
+            
         </div>
     </div>
 
