实现分页功能

--- a/my_blog/my_blog/templates/home2.html
+++ b/my_blog/my_blog/templates/home2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/static/styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/page_styles.css">
     <title>tuxinghuan's blog</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <li><a href="#" >所有博客</a></li>
                 <li><a href="#" >给我留言</a></li>
             </ul>
-            </div>   
+            </div>  
         </div>
     </div>
 
