增加翻页功能

--- a/my_blog/my_blog/templates/home.html
+++ b/my_blog/my_blog/templates/home.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>Tuxinghuan Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -54,8 +54,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Easy Blog</h1>
-              <span class="subheading">This is my first blog--vary simple</span>
+              <span class="subheading">功唐不捐，玉汝于成</span>
             </div>
           </div>
         </div>
