--- a/my_blog/my_blog/templates/home2.html
+++ b/my_blog/my_blog/templates/home2.html
@@ -36,16 +36,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#">首页</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">关于我</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sample Post</a>
-            </li>
+              <a class="nav-link" href="#">联系我</a>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+
+
             </li>
           </ul>
         </div>
