--- a/my_blog/my_blog/templates/home.html
+++ b/my_blog/my_blog/templates/home.html
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">首页</a>
+              <a class="nav-link" href="{% url 'home' %}">首页</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">关于我</a>
+              <a class="nav-link" href="{% url 'aboutme' %}">关于我</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">联系我</a>
