--- a/my_blog/my_blog/templates/index.html
+++ b/my_blog/my_blog/templates/index.html
@@ -14,6 +14,7 @@
             <p class="post-meta">
               {{post.time}}
           </div>
+          <p  class="post-preview">分类：<span class="btn btn-success">{{post.category}}</span></p>
           <hr>  
     {% endfor %}
 
