--- a/my_blog/my_blog/templates/home.html
+++ b/my_blog/my_blog/templates/home.html
@@ -10,11 +10,11 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Custom fonts for this template -->
     <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
     <link href="/static/css/clean-blog.min.css" rel="stylesheet">
@@ -64,25 +64,13 @@
     <!-- Main Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-9  ">
+        <div class="col-lg-6 mx-auto ">
           <div class="post-preview">
             {% block content %}
             {% endblock %}
           </div>
         </div>
           <!-- Pager -->
-        <div class="col-lg-3  ">
-        <table class='table-hover'>
-        <thread>
-        <tr><th>归档</th></tr>
-        </thead>
-        <tbody>
-        <tr><td><a href=""><button class="btn btn-primary" type="button">
-                  Messages <span class="badge">4</span>
-          </button></td></tr>
-        </tbody>
-        </table>
-        </div>
             
         
       </div>
